LINE-SPACING FIXED

--- a/static/assets/styles.css
+++ b/static/assets/styles.css
@@ -372,7 +372,7 @@ body {
 	margin-bottom: 25px;
 }
 
-hr {
+/* hr {
 	border: 0;
 	border-top: thin solid #243588;
   	clear:both;
@@ -380,7 +380,7 @@ hr {
   	width: 100%;               
   	background-color:#000000;
   	height: 1px;
-}
+} */
 
 
 
